--- a/index.html
+++ b/index.html
@@ -372,7 +372,6 @@
         </div>
         <div class="tl-row">
           <div class="tl-card">
-            <h4 style="margin:0 0 6px">이슈 해결</h4>
             <ul style="margin:0; padding-left:18px">
               <li>CO 센서 워밍업 문제</li>
               <li>가스 농도 경계값 설정 문제</li>
@@ -380,10 +379,10 @@
             </ul>
           </div>
           <div class="tl-card center">
-          <a class="btn" href="./docs/IOTthesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+          <a class="btn" href="./main/IOTthesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
             논문
           </a>
-          <a class="btn" href="./docs/IOTtech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+          <a class="btn" href="./main/IOTtech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
             기술 보고서
           </a>
           </div>
