--- a/index.html
+++ b/index.html
@@ -379,10 +379,10 @@
             </ul>
           </div>
           <div class="tl-card center">
-          <a class="btn" href="./main/IOTthesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+          <a class="btn" href="IOTtesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
             논문
           </a>
-          <a class="btn" href="./main/IOTtech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+          <a class="btn" href="IOTtech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
             기술 보고서
           </a>
           </div>
