--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
         </div>
 
         <div class="tl-wrap">
-          <span class="tl-label" style="top:110px">기술 스택</span>
-          <span class="tl-pin" style="top:134px"></span>
+          <span class="tl-label" style="top:-15px">기술 스택</span>
+          <span class="tl-pin" style="top:10px"></span>
         </div>
         <div class="tl-row">
           <div></div>
@@ -322,11 +322,11 @@
             <h4 style="margin:0 0 6px">기술 스택</h4>
             <p>Kotlin, C언어, STM32, GitHub</p>
           </div>
-        </div>
+        </div><br/>
 
         <div class="tl-wrap">
-          <span class="tl-label" style="top:220px">주 기능</span>
-          <span class="tl-pin" style="top:244px"></span>
+          <span class="tl-label" style="top:-10px">주 기능</span>
+          <span class="tl-pin" style="top:15px"></span>
         </div>
         <div class="tl-row">
           <div class="tl-card">
@@ -350,8 +350,8 @@
         </div>
 
         <div class="tl-wrap">
-          <span class="tl-label" style="top:332px">핵심 기술</span>
-          <span class="tl-pin" style="top:356px"></span>
+          <span class="tl-label" style="top:-15px">핵심 기술</span>
+          <span class="tl-pin" style="top:10px"></span>
         </div>
         <div class="tl-row">
           <div></div>
@@ -364,14 +364,15 @@
               <li>안전 제어 메커니즘</li>
             </ul>
           </div>
-        </div>
+        </div><br/>
 
         <div class="tl-wrap">
-          <span class="tl-label" style="top:448px">이슈 해결</span>
-          <span class="tl-pin" style="top:472px"></span>
+          <span class="tl-label" style="top:-10px">이슈 해결</span>
+          <span class="tl-pin" style="top:15px"></span>
         </div>
         <div class="tl-row">
           <div class="tl-card">
+            <h4 style="margin:0 0 6px">이슈 해결</h4>
             <ul style="margin:0; padding-left:18px">
               <li>CO 센서 워밍업 문제</li>
               <li>가스 농도 경계값 설정 문제</li>
@@ -379,7 +380,7 @@
             </ul>
           </div>
           <div class="tl-card center">
-          <a class="btn" href="./IOTtesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+          <a class="btn" href="./IOTthesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
             논문
           </a>
           <a class="btn" href="./IOTtech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
