--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <p>가정에서 가스 누출 사고가 빈번하게 발생하기에 이를 예방하고자 시스템을 설계하였습니다. </p>
           </div>
           <div></div>
-        </div>
+        </div><br/>
 
         <div class="tl-wrap">
           <span class="tl-label" style="top:-15px">기술 스택</span>
@@ -347,7 +347,7 @@
             </ul>
           </div>
           <div></div>
-        </div>
+        </div><br/>
 
         <div class="tl-wrap">
           <span class="tl-label" style="top:-15px">핵심 기술</span>
