--- a/index.html
+++ b/index.html
@@ -394,68 +394,75 @@
     <!-- 프로젝트 2 / 3는 위 article.project를 복제해 내용만 바꾸면 스크린샷처럼 이어집니다 -->
     </section>
 
-  <script>
-    const form = document.getElementById('contactForm');
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const btn = form.querySelector('button[type="submit"]');
-      btn.disabled = true; btn.textContent = '전송 중...';
+    <section id="contact" class="container" style="margin-top:30px">
+      <div class="section-head">
+        <h2>SEND ME A MESSAGE</h2>
+        <span class="divider"></span>
+      </div>
 
-      // _replyto에 보낸 사용자의 이메일 채워 넣기(선택)
-      const emailInput = form.querySelector('input[name="email"]');
-      form.querySelector('input[name="_replyto"]').value = emailInput.value;
+      <div class="card">
+        <form id="contactForm" action="https://formspree.io/f/movkepna" method="POST">
+          <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px">
+            <input name="name" type="text" placeholder="성함" required />
+            <input name="email" type="email" placeholder="이메일" required />
+          </div>
+          <textarea name="message" placeholder="내용" required></textarea>
 
-      try {
-        const res = await fetch('https://formspree.io/f/ehdn4358@naver.com', {
-          method: 'POST',
-          body: new FormData(form),
-          headers: { 'Accept': 'application/json' }
-        });
-        if (res.ok) {
-          alert('감사합니다! 메시지를 성공적으로 보냈어요.');
-          form.reset();
-        } else {
-          alert('전송에 실패했습니다. 잠시 후 다시 시도해주세요.');
-        }
-      } catch (err) {
-        alert('네트워크 오류가 발생했습니다. 다시 시도해주세요.');
-      } finally {
-        btn.disabled = false; btn.textContent = '보내기 ✈';
-      }
-    });
-  </script>
+          <!-- 스팸 방지: 봇이 채우면 서버에서 걸러짐 -->
+          <input type="text" name="_honey" style="display:none">
 
-  <!-- CONTACT -->
-  <section id="contact" class="container" style="margin-top:30px">
-    <div class="section-head">
-      <h2>SEND ME A MESSAGE</h2>
-      <span class="divider"></span>
-    </div>
-    <div class="card">
-      <form onsubmit="event.preventDefault(); alert('감사합니다! 메시지를 확인해 볼게요.');">
-        <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px">
-          <input type="text" placeholder="성함" required />
-          <input type="email" placeholder="이메일" required />
-        </div>
-        <textarea placeholder="내용" required></textarea>
-        <button class="btn primary" type="submit">보내기 ✈</button>
-      </form>
-    </div>
-  </section>
+          <!-- 한국어 자동응답/알림(폼스프리 지원) -->
+          <input type="hidden" name="_language" value="ko" />
 
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click', e=>{
-        const id = a.getAttribute('href');
-        if(id.length>1){
-          const el = document.querySelector(id);
-          if(!el) return;
-          e.preventDefault();
-          window.scrollTo({top: el.getBoundingClientRect().top + window.scrollY - 70, behavior:'smooth'});
+          <!-- 메일 제목(받는 쪽 편의) -->
+          <input type="hidden" name="subject" value="포트폴리오 문의 도착" />
+
+          <button class="btn primary" type="submit">보내기 ✈</button>
+        </form>
+      </div>
+    </section>
+
+    <script>
+      const form = document.getElementById('contactForm');
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const btn = form.querySelector('button[type="submit"]');
+        btn.disabled = true; btn.textContent = '전송 중...';
+
+        try {
+          const res = await fetch(form.action, {
+            method: 'POST',
+            body: new FormData(form),
+            headers: { 'Accept': 'application/json' }
+          });
+          if (res.ok) {
+            alert('감사합니다! 메시지를 성공적으로 보냈어요.');
+            form.reset();
+          } else {
+            const err = await res.json().catch(()=>null);
+            alert('전송 실패: ' + (err?.errors?.[0]?.message || '잠시 후 다시 시도해주세요.'));
+          }
+        } catch (err) {
+          alert('네트워크 오류가 발생했습니다. 다시 시도해주세요.');
+        } finally {
+          btn.disabled = false; btn.textContent = '보내기 ✈';
         }
       });
-    });
-  </script>
+    </script>
+
+    <script>
+      document.getElementById('y').textContent = new Date().getFullYear();
+      document.querySelectorAll('a[href^="#"]').forEach(a=>{
+        a.addEventListener('click', e=>{
+          const id = a.getAttribute('href');
+          if(id.length>1){
+            const el = document.querySelector(id);
+            if(!el) return;
+            e.preventDefault();
+            window.scrollTo({top: el.getBoundingClientRect().top + window.scrollY - 70, behavior:'smooth'});
+          }
+        });
+      });
+    </script>
 </body>
 </html>
