--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <article class="project">
       <h3 style="text-align:center; margin:0 0 6px">IOT를 이용한 고기능 가스 누출 방지 시스템 설계</h3>
       <p style="text-align:center; color:#6b7280; margin:0 0 18px">2023.03.10 – 2023.10.25 · 가스 사고 예방을 위한 시스템 설계</p>
-      <div class="photo1" style="background-image:url('./IoT_Gas.jpg')" title="IOT를 이용한 고기능 가스 누출 방지 시스템 설계"></div>
+      <div class="photo1" style="background-image:url('./IOT_Gas.jpg')" title="IOT를 이용한 고기능 가스 누출 방지 시스템 설계"></div>
 
       <!-- 중앙 세로 타임라인 -->
       <div class="timeline">
