--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
       border:2px solid #fff; box-shadow:var(--shadow-sm)
     }
 
+    .photo2{
+      width:100%; height:1200px; background:#e2e8f0 center/cover no-repeat;
+      border:2px solid #fff; box-shadow:var(--shadow-sm)
+    }
+
     .profile ul{list-style:none; padding:12px 0 0; margin:0}
     .profile li{padding:12px 0; border-bottom:1px solid var(--line)}
     .label{display:inline-block; min-width:78px; color:var(--muted)}
@@ -244,8 +249,11 @@
         <span class="chip">STM32</span> 
         <span class="chip">GitHub</span>
         <span class="chip">Range of Motion</span>
+        <span class="chip">LoRa</span>
+        <span class="chip">Modbus Protocol</span>
+        <span class="chip">LCD</span>
         <p>의료기기의 관절가동범위를 측정·기록하는 시스템을 설계했습니다. 
-        하드웨어 제어와 LCD UI, 데이터 기록 기능을 통합하여 재활 치료의 효율성을 높였습니다. 
+        하드웨어 제어와 LCD UI, LoRa 기능을 통합하여 재활 치료의 효율성을 높였습니다. 
         연구 결과는 반도체디스플레이학회 논문으로 게재되었습니다.</p>
 
         <h4 style="margin:18px 0 6px">IoT를 이용한 재활 운동 의료기기의 모니터링 시스템 설계 <small style="color:var(--muted)">24.03~24.07</small></h4>
@@ -255,7 +263,7 @@
         <span class="chip">Modbus Protocol</span> 
         <span class="chip">GitHub</span>
         <span class="chip">Monitoring System</span>
-        <p>LoRa 통신·LCD 제어·안드로이드 앱을 결합해 사용자의 운동 상태를 실시간 모니터링할 수 있는 시스템을 구현했습니다. 
+        <p>안드로이드 앱을 제작하여 사용자의 운동 상태를 실시간 모니터링할 수 있는 시스템을 구현했습니다. 
         연구원들과 협업하여 통신 프로토콜 문제를 해결했고, 데이터 시각화 및 기록 관리 기능을 확보했습니다. 
         성과는 한국정보기술학회 추계 학술대회 논문집에 게재되었습니다.</p>
 
@@ -284,6 +292,7 @@
   </section>
 
   <!-- PROJECT (one block – 복수개면 이 블록을 복제) -->
+  <!-- PROJECT (IOT를 이용한 고기능 가스 누출 방지 시스템 설계) -->
   <section id="project" class="container">
     <div class="section-head">
       <h2>PROJECT</h2>
@@ -294,7 +303,7 @@
     <article class="project">
       <h3 style="text-align:center; margin:0 0 6px">IOT를 이용한 고기능 가스 누출 방지 시스템 설계</h3>
       <p style="text-align:center; color:#6b7280; margin:0 0 18px">2023.03.10 – 2023.10.25 · 가스 사고 예방을 위한 시스템 설계</p>
-      <div class="photo1" style="background-image:url('./IoT_Gas.jpg')" title="IOT를 이용한 고기능 가스 누출 방지 시스템 설계"></div>
+      <div class="photo1" style="background-image:url('./IOT_Gas.jpg')" title="IOT를 이용한 고기능 가스 누출 방지 시스템 설계"></div>
 
       <!-- 중앙 세로 타임라인 -->
       <div class="timeline">
@@ -358,7 +367,7 @@
           <div class="tl-card">
             <h4 style="margin:0 0 6px">핵심 기술</h4>
             <ul style="margin:0; padding-left:18px">
-              <li>CO 센서를 통해 실내 가스 농도를 실시간 측정(0~250ppm 범위)</li>
+              <li>CO 센서를 통해 실내 가스 농도를 실시간 측정</li>
               <li>MCU 제어 및 임베디드 펌웨어</li>
               <li>IoT 통신 및 사용자 인터페이스</li>
               <li>안전 제어 메커니즘</li>
@@ -385,6 +394,119 @@
           </a>
           <a class="btn" href="./IOTtech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
             기술 보고서
+          </a>
+          </div>
+        </div>
+      </div>
+    </article>
+
+    <!-- PROJECT (one block – 복수개면 이 블록을 복제) -->
+  <!-- PROJECT (IOT를 이용한 고기능 가스 누출 방지 시스템 설계) -->
+  <section id="project" class="container">
+    <div class="section-head">
+      <h2>PROJECT</h2>
+      <span class="divider"></span>
+    </div>
+
+    <!-- 프로젝트 1 -->
+    <article class="project">
+      <h3 style="text-align:center; margin:0 0 6px">관절가동범위 측정 기능을 갖는 연속수동운동 의료기기 시스템 설계</h3>
+      <p style="text-align:center; color:#6b7280; margin:0 0 18px">2024.01.04 – 2024.11.14 · 관절 재활 치료가 가능한 복합관절 의료기기 설계</p>
+      <div class="photo2" style="background-image:url('./ROM.jpg')" title="IOT를 이용한 고기능 가스 누출 방지 시스템 설계"></div>
+
+      <!-- 중앙 세로 타임라인 -->
+      <div class="timeline">
+        <!-- 라벨/핀 -->
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-6px">개발 이유</span>
+          <span class="tl-pin" style="top:18px"></span>
+        </div>
+
+        <div class="tl-row">
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">개발 이유</h4>
+            <p>관절 재활을 위해서는 병원에 직접 찾아가야하므로 비용적인 부담과 시간적인 부담이 있는데, 이를 해결하기 위해 가정에서도 재활 치료가 가능한 시스템을 설게하였습니다.</p>
+          </div>
+          <div></div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-15px">기술 스택</span>
+          <span class="tl-pin" style="top:10px"></span>
+        </div>
+        <div class="tl-row">
+          <div></div>
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">기술 스택</h4>
+            <p>C언어, STM32, GitHub, Range of Motion, LoRa,<br/> Modbus Protocol, LCD</p>
+          </div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-10px">주 기능</span>
+          <span class="tl-pin" style="top:15px"></span>
+        </div>
+        <div class="tl-row">
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">주 기능</h4></br>
+            <h4 style="margin:0 0 6px">5가지 관절(어깨, 팔꿈치, 무릎, 발목, 손목) 운동 기능</h4>
+            <ul style="margin:0; padding-left:18px">
+              <li>일반 운동</li>
+              <li>적응 운동</li>
+              <li>집중 운동</li>
+              <li>운동각 측정 모드</li>
+              <li>수동 모드</li>
+              <a class="btn" href="./ROMtech1.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+                5가지 관절 운동 기능 설명서
+              </a>
+            </ul></br>
+            <h4 style="margin:0 0 6px">LoRa를 활용한 원거리 통신 기능</h4>
+            <ul style="margin:0; padding-left:18px">
+              <li>최대 2km까지 원거리 통신 가능</li>
+              <li>PC에서 실시간으로 운동 모니터링</li>
+              <a class="btn" href="./LoRa_PC_Connect.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+                LoRa 모듈과 Modbus 프로그램간 연결 설명서
+              </a>
+              <a class="btn" href="./ROMtech2.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+              LoRa 모듈 실험 결과
+              </a>
+            </ul>
+          </div>
+          <div></div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-15px">핵심 기술</span>
+          <span class="tl-pin" style="top:10px"></span>
+        </div>
+        <div class="tl-row">
+          <div></div>
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">핵심 기술</h4>
+            <ul style="margin:0; padding-left:18px">
+              <li>ROM(관절가동범위) 측정·보정</li>
+              <li>운동 제어 알고리즘</li>
+              <li>LoRa 무선 통신·원격 모니터링</li>
+            </ul>
+          </div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-10px">이슈 해결</span>
+          <span class="tl-pin" style="top:15px"></span>
+        </div>
+        <div class="tl-row">
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">이슈 해결</h4>
+            <ul style="margin:0; padding-left:18px">
+              <li>에러 발생시 에러 코드를 읽고 LCD에 에러 화면 안내 절차</li>
+              <li>운동 중 LoRa에서 설정 Write 시 예외 응답(Modbus)</li>
+              <li>본체–디스플레이 통신 끊김(모터 일시 정지)</li>
+            </ul>
+          </div>
+          <div class="tl-card center">
+          <a class="btn" href="./ROMthesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+            논문
           </a>
           </div>
         </div>
