--- a/index.html
+++ b/index.html
@@ -96,22 +96,74 @@
       position:relative; padding-top:18px
     }
     .photo{
-      width:100%; height:420px; background:#e2e8f0 center/cover no-repeat;
+      width:100%; height:480px; background:#e2e8f0 center/cover no-repeat;
       border:2px solid #fff; box-shadow:var(--shadow-sm)
     }
 
     .photo1{
-      width:100%; height:800px; background:#e2e8f0 center/cover no-repeat;
-      border:2px solid #fff; box-shadow:var(--shadow-sm)
+      /* 카드 폭 제한: 너무 커지지 않게 */
+      width: min(100vw, 730px);
+      margin: 0 auto;
+
+      /* 높이: 화면에 따라 유연하게 (최소~중간~최대) */
+      height: clamp(220px, 45vw, 540px);
+
+      background: #e2e8f0 url("./assets/iot_app_960.webp") center/contain no-repeat;
+      /* contain: 크롭 없이 맞추기(blur 줄임). 꽉 채우려면 cover지만, 작게 보이면 필요 시 cover로 교체 */
+      border: 2px solid #fff;
+      border-radius: 14px;
+      box-shadow: var(--shadow-sm);
     }
 
     .photo2{
-      width:100%; height:1200px; background:#e2e8f0 center/cover no-repeat;
-      border:2px solid #fff; box-shadow:var(--shadow-sm)
+      /* 카드 폭 제한: 너무 커지지 않게 */
+      width: min(50vw, 463px);
+      margin: 0 auto;
+
+      /* 높이: 화면에 따라 유연하게 (최소~중간~최대) */
+      height: clamp(220px, 45vw, 540px);
+
+      background: #e2e8f0 url("./assets/iot_app_960.webp") center/contain no-repeat;
+      /* contain: 크롭 없이 맞추기(blur 줄임). 꽉 채우려면 cover지만, 작게 보이면 필요 시 cover로 교체 */
+      border: 2px solid #fff;
+      border-radius: 14px;
+      box-shadow: var(--shadow-sm);
     }
 
-    .profile ul{list-style:none; padding:12px 0 0; margin:0}
-    .profile li{padding:12px 0; border-bottom:1px solid var(--line)}
+    .photo3{
+      /* 카드 폭 제한: 너무 커지지 않게 */
+      width: min(90vw, 255px);
+      margin: 0 auto;
+
+      /* 높이: 화면에 따라 유연하게 (최소~중간~최대) */
+      height: clamp(220px, 45vw, 540px);
+
+      background: #e2e8f0 url("./assets/iot_app_960.webp") center/contain no-repeat;
+      /* contain: 크롭 없이 맞추기(blur 줄임). 꽉 채우려면 cover지만, 작게 보이면 필요 시 cover로 교체 */
+      border: 2px solid #fff;
+      border-radius: 14px;
+      box-shadow: var(--shadow-sm);
+    }
+
+    .photo4{
+      /* 카드 폭 제한: 너무 커지지 않게 */
+      width: min(90vw, 805px);
+      margin: 0 auto;
+
+      /* 높이: 화면에 따라 유연하게 (최소~중간~최대) */
+      height: clamp(220px, 45vw, 540px);
+
+      background: #e2e8f0 url("./assets/iot_app_960.webp") center/contain no-repeat;
+      /* contain: 크롭 없이 맞추기(blur 줄임). 꽉 채우려면 cover지만, 작게 보이면 필요 시 cover로 교체 */
+      border: 2px solid #fff;
+      border-radius: 14px;
+      box-shadow: var(--shadow-sm);
+    }
+
+    /* 리스트 하단 여백/선 제거 */
+    .profile ul{ margin:0; padding-top:8px; }
+    .profile li{ padding:10px 0; border-bottom:1px solid var(--line); }
+    .profile li:last-child{ border-bottom:0; }  /* 마지막 항목 밑줄 제거 */
     .label{display:inline-block; min-width:78px; color:var(--muted)}
     .chips{display:flex; flex-wrap:wrap; gap:8px; margin-top:10px}
     .chip{background:#eef2ff; color:#1e3a8a; border:1px solid #dbeafe; border-radius:999px; padding:6px 10px; font-size:12px}
@@ -141,14 +193,6 @@
     }
     .tl-wrap{position:relative}
 
-    /* RESULTS: three soft cards */
-    .results-grid{display:grid; grid-template-columns:repeat(3,1fr); gap:20px}
-    .result{
-      border:1px solid var(--line); border-radius:16px; padding:18px; box-shadow:var(--shadow);
-    }
-    .r1{background:#ffe4e6} .r2{background:#efe9ff} .r3{background:#e5fbff}
-    .result h4{margin:0 0 8px}
-
     /* CONTACT FORM */
     form{display:grid; gap:12px}
     input,textarea{
@@ -167,7 +211,6 @@
     /* responsive */
     @media (max-width:980px){
       .about-grid{grid-template-columns:1fr}
-      .results-grid{grid-template-columns:1fr}
       .tl-row{grid-template-columns:1fr}
       .timeline:before{left:20px}
       .tl-pin,.tl-label{left:20px; transform:translate(-50%,-6px)}
@@ -185,7 +228,6 @@
       <nav class="links" aria-label="주요 섹션">
         <a href="#about">ABOUT</a>
         <a href="#project">PROJECT</a>
-        <a href="#results">RESULTS</a>
         <a href="#contact">CONTACT</a>
       </nav>
     </div>
@@ -209,7 +251,6 @@
       <div class="icons" aria-label="아이콘 링크">
         <a class="diamond" href="#about" title="About"><span>ⓘ</span></a>
         <a class="diamond" href="#project" title="Project"><span>▶</span></a>
-        <a class="diamond" href="#results" title="Results"><span>★</span></a>
         <a class="diamond" href="#contact" title="Contact"><span>✉</span></a>
       </div>
       <div class="scroll" aria-hidden="true"></div>
@@ -272,24 +313,26 @@
         <span class="chip">STM32</span> 
         <span class="chip">Modbus Protocol</span> 
         <span class="chip">Power Line Communication</span> 
+        <span class="chip">Intelligent</span>
         <span class="chip">GitHub</span>
+        
         <p>PLC(Power Line Communication) 기반으로 저비용·고효율의 위치 추적 화재 감지기를 개발했습니다. 
         ADC 온도 측정, UART 통신, 지능형 알고리즘을 결합해 기존 대비 빠르고 정확한 감지를 실현했습니다. 
         LCD 표시기를 통해 화재 발생 위치를 실시간으로 확인할 수 있는 구조를 설계했습니다.</p>
       </div>
-
-      <!-- right: profile card like the screenshot -->
-      <aside class="card profile">
-        <div class="photo" style="background-image:url('./profile.jpg')" title="증명사진"></div>
-        <ul>
-          <li><span class="label">Name</span> : 유도우</li>
-          <li><span class="label">Address</span> : 충북 청주</li>
-          <li><span class="label">Email</span> : <a href="mailto:ehdn4358@naver.com">ehdn4358@naver.com</a></li>
-          <li><span class="label">Github</span> : <a href="https://github.com" target="_blank">https://github.com</a></li>
-        </ul>
-      </aside>
+      <div class="photo" style="background-image:url('./profile.jpg')" title="증명사진">
+      <h4 style="margin:500px 0 500px">
+      <ul>
+        <li><span class="label">Name</span> : 유도우</li>
+        <li><span class="label">Address</span> : 충북 청주</li>
+        <nav class="links" aria-label="주요 섹션"></nav><li><span class="label">Email</span> : <a href="#contact" title="Contact"><span>ehdn4358@naver.com</span></a>
+        <li><span class="label">Github</span> : <a href="https://github.com" target="_blank">https://github.com</a></li>
+      </ul>
+      </h4>
+      </div>
     </div>
   </section>
+
 
   <!-- PROJECT (one block – 복수개면 이 블록을 복제) -->
   <!-- PROJECT (IOT를 이용한 고기능 가스 누출 방지 시스템 설계) -->
@@ -393,7 +436,7 @@
             논문
           </a>
           <a class="btn" href="./IOTtech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
-            기술 보고서
+            가스 누출 방지 시스템 실험 및 결과
           </a>
           </div>
         </div>
@@ -401,7 +444,7 @@
     </article>
 
     <!-- PROJECT (one block – 복수개면 이 블록을 복제) -->
-  <!-- PROJECT (IOT를 이용한 고기능 가스 누출 방지 시스템 설계) -->
+  <!-- PROJECT (관절가동범위 측정 기능을 갖는 연속수동운동 의료기기 시스템 설계) -->
   <section id="project" class="container">
     <div class="section-head">
       <h2>PROJECT</h2>
@@ -412,7 +455,7 @@
     <article class="project">
       <h3 style="text-align:center; margin:0 0 6px">관절가동범위 측정 기능을 갖는 연속수동운동 의료기기 시스템 설계</h3>
       <p style="text-align:center; color:#6b7280; margin:0 0 18px">2024.01.04 – 2024.11.14 · 관절 재활 치료가 가능한 복합관절 의료기기 설계</p>
-      <div class="photo2" style="background-image:url('./ROM.jpg')" title="IOT를 이용한 고기능 가스 누출 방지 시스템 설계"></div>
+      <div class="photo2" style="background-image:url('./ROM.jpg')" title="관절가동범위 측정 기능을 갖는 연속수동운동 의료기기 시스템 설계"></div>
 
       <!-- 중앙 세로 타임라인 -->
       <div class="timeline">
@@ -512,6 +555,204 @@
         </div>
       </div>
     </article>
+
+  <!-- PROJECT (IoT를 이용한 재활 운동 의료기기의 모니터링 시스템 설계) -->
+  <section id="project" class="container">
+    <div class="section-head">
+      <h2>PROJECT</h2>
+      <span class="divider"></span>
+    </div>
+
+    <!-- 프로젝트 1 -->
+    <article class="project">
+      <h3 style="text-align:center; margin:0 0 6px">IoT를 이용한 재활 운동 의료기기의 모니터링 시스템 설계</h3>
+      <p style="text-align:center; color:#6b7280; margin:0 0 18px">2024.03.11 – 2024.07.30 · 사용자의 운동 상태를 실시간으로 모니터링할 수 있는 APP 개발 </p>
+      <div class="photo3" style="background-image:url('./IOT_APP.jpg')" title="IoT를 이용한 재활 운동 의료기기의 모니터링 시스템 설계"></div>
+
+      <!-- 중앙 세로 타임라인 -->
+      <div class="timeline">
+        <!-- 라벨/핀 -->
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-6px">개발 이유</span>
+          <span class="tl-pin" style="top:18px"></span>
+        </div>
+
+        <div class="tl-row">
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">개발 이유</h4>
+            <p>어플을 통해 실시간으로 사용자의 운동 상태를 모니터링 하고, 운동 결과와 운동 횟수를 기록하고 저장하여 사용자의 재활 운동에 도움을 주기 위해 개발하였습니다.</p>
+          </div>
+          <div></div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-15px">기술 스택</span>
+          <span class="tl-pin" style="top:10px"></span>
+        </div>
+        <div class="tl-row">
+          <div></div>
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">기술 스택</h4>
+            <p>Kotlin, C언어, STM32, GitHub, Modbus Protocol, LCD, Monitoring System</p>
+          </div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-10px">주 기능</span>
+          <span class="tl-pin" style="top:15px"></span>
+        </div>
+        <div class="tl-row">
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">주 기능</h4></br>
+            <ul style="margin:0; padding-left:18px">
+            <li>5가지 관절(어깨, 팔꿈치, 무릎, 발목, 손목) 운동 실시간<br/>모니터링 기능</li>
+            <li>운동각 측정 기록 저장 및 그래프 표시</li>
+            <li>운동 기록 저장 및 그래프 표시</li>
+            </ul>
+          </div>
+          <div></div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-15px">핵심 기술</span>
+          <span class="tl-pin" style="top:10px"></span>
+        </div>
+        <div class="tl-row">
+          <div></div>
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">핵심 기술</h4>
+            <ul style="margin:0; padding-left:18px">
+              <li>BLE 연동 & 권한 처리</li>
+              <li>실시간 모니터링</li>
+              <li>운동 데이터 로깅/시각화</li>
+              <li>상태 동기화 UI</li>
+            </ul>
+          </div>
+        </div><br/>
+
+        <div class="tl-wrap">
+          <span class="tl-label" style="top:-10px">이슈 해결</span>
+          <span class="tl-pin" style="top:15px"></span>
+        </div>
+        <div class="tl-row">
+          <div class="tl-card">
+            <h4 style="margin:0 0 6px">이슈 해결</h4>
+            <ul style="margin:0; padding-left:18px">
+              <li>스캔에 기기가 안 잡힘</li>
+              <li>사용 중 블루투스 끊김</li>
+              <li>부위별 데이터 혼선</li>
+            </ul>
+          </div>
+          <div class="tl-card center">
+          <a class="btn" href="./BT_APP_thesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+            논문
+          </a>
+          <a class="btn" href="./BT_APP_tech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+            APP 동작 명세서
+          </a>
+          </div>
+        </div>
+      </div>
+    </article>
+
+    <!-- PROJECT (지능형 열 감지기를 활용한 실시간 위치 추적 화재 감지 시스템 설계) -->
+    <section id="project" class="container">
+      <div class="section-head">
+        <h2>PROJECT</h2>
+        <span class="divider"></span>
+      </div>
+
+      <!-- 프로젝트 1 -->
+      <article class="project">
+        <h3 style="text-align:center; margin:0 0 6px">지능형 열 감지기를 활용한 실시간 위치 추적 화재 감지 시스템 설계</h3>
+        <p style="text-align:center; color:#6b7280; margin:0 0 18px">2025.03.05 – 2025.08.29 · PLC기반 저비용·고효율의 화재 감지 시스템을 설계</p>
+        <div class="photo4" style="background-image:url('./Fire_System.jpg')" title="지능형 열 감지기를 활용한 실시간 위치 추적 화재 감지 시스템 설계"></div>
+
+        <!-- 중앙 세로 타임라인 -->
+        <div class="timeline">
+          <!-- 라벨/핀 -->
+          <div class="tl-wrap">
+            <span class="tl-label" style="top:-6px">개발 이유</span>
+            <span class="tl-pin" style="top:18px"></span>
+          </div>
+
+          <div class="tl-row">
+            <div class="tl-card">
+              <h4 style="margin:0 0 6px">개발 이유</h4>
+              <p>고효율의 화재 감지 시스템은 일반 소비자가 사용하기엔 가격적 부담이 있기 때문에, 저비용으로도 실시간 화재 위치 추적이 가능한 지능형 화재 감지 시스템을 설계하였습니다.</p>
+            </div>
+            <div></div>
+          </div><br/>
+
+          <div class="tl-wrap">
+            <span class="tl-label" style="top:-15px">기술 스택</span>
+            <span class="tl-pin" style="top:10px"></span>
+          </div>
+          <div class="tl-row">
+            <div></div>
+            <div class="tl-card">
+              <h4 style="margin:0 0 6px">기술 스택</h4>
+              <p>C언어, STM32, GitHub, Modbus Protocol, Power Line Communication, Intelligent</p>
+            </div>
+          </div><br/>
+
+          <div class="tl-wrap">
+          <span class="tl-label" style="top:-10px">주 기능</span>
+          <span class="tl-pin" style="top:15px"></span>
+          </div>
+          <div class="tl-row">
+            <div class="tl-card">
+              <h4 style="margin:0 0 6px">주 기능</h4></br>
+              <ul style="margin:0; padding-left:18px">
+                <li>조기 화재 감지</li>
+                <li>실시간 위치 추적</li>
+                <li>저비용 설치</li>
+                <li>이벤트 기록/관리</li>
+              </ul></br>
+            </div>
+            <div></div>
+          </div><br/>
+
+          <div class="tl-wrap">
+            <span class="tl-label" style="top:-15px">핵심 기술</span>
+            <span class="tl-pin" style="top:10px"></span>
+          </div>
+          <div class="tl-row">
+            <div></div>
+            <div class="tl-card">
+              <h4 style="margin:0 0 6px">핵심 기술</h4>
+              <ul style="margin:0; padding-left:18px">
+                <li>지능형 판정 알고리즘</li>
+                <li>PLC 회로 설계</li>
+                <li>주소/식별 체계</li>
+              </ul>
+            </div>
+          </div><br/>
+
+          <div class="tl-wrap">
+            <span class="tl-label" style="top:-10px">이슈 해결</span>
+            <span class="tl-pin" style="top:15px"></span>
+          </div>
+          <div class="tl-row">
+            <div class="tl-card">
+              <h4 style="margin:0 0 6px">이슈 해결</h4>
+              <ul style="margin:0; padding-left:18px">
+                <li>오탐(난방·열풍 등)으로 경보</li>
+                <li>전력선 통신 잡음/왜곡</li>
+                <li>다수 감지기 동시 응답 충돌</li>
+              </ul>
+            </div>
+            <div class="tl-card center">
+            <a class="btn" href="./Fire_Detector_thesis.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+              논문
+            </a>
+            <a class="btn" href="./Fire_Detector_tech.pdf" target="_blank" rel="noopener noreferrer" style="margin-left:8px">
+              화재 감지 시스템 실험 및 결과
+            </a>
+            </div>
+          </div>
+        </div>
+      </article>
 
     <!-- 프로젝트 2 / 3는 위 article.project를 복제해 내용만 바꾸면 스크린샷처럼 이어집니다 -->
     </section>
