--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <li><span class="label">Name</span> : 유도우</li>
         <li><span class="label">Address</span> : 충북 청주</li>
         <nav class="links" aria-label="주요 섹션"></nav><li><span class="label">Email</span> : <a href="#contact" title="Contact"><span>ehdn4358@naver.com</span></a>
-        <li><span class="label">Github</span> : <a href="https://github.com" target="_blank">https://github.com</a></li>
+        <li><span class="label">Github</span> : <a href="https://github.com/Do-Woo-Yu" target="_blank">https://github.com/Do-Woo-Yu</a></li>
       </ul>
       </h4>
       </div>
